--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "flowbite-react": "^0.4.9",
     "i18next": "^23.2.3",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
@@ -23,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
